Fixing buttons alignment in panel headings

--- a/public/css/index.styl
+++ b/public/css/index.styl
@@ -142,6 +142,8 @@ a.label
 
 .btn 
   margin-right: 5px
+.panel-heading .btn // Fixing improper vertical alignment of buttons in panel headers 
+  margin-top: -8px
 
 .vertical-align
   vertical-align: middle
